compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_nat.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var i : int\nvar n : nat\n\nvar _v00 : nat := 1\nvar _v01 : nat := i\nvar _v02 : nat := n\n"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(0))) TyRef(Int(Int))
    TypeId(HirId(Idx::<HirNode>(2))) TyRef(Nat(Nat))
    TypeId(HirId(Idx::<HirNode>(4))) TyRef(Nat(Nat))
    TypeId(HirId(Idx::<HirNode>(7))) TyRef(Nat(Nat))
    TypeId(HirId(Idx::<HirNode>(10))) TyRef(Nat(Nat))
def_kinds:
    DefId(0) Var(TyRef(Int(Int)))
    DefId(1) Var(TyRef(Nat(Nat)))
    DefId(2) Var(TyRef(Nat(Nat)))
    DefId(3) Var(TyRef(Nat(Nat)))
    DefId(4) Var(TyRef(Nat(Nat)))
