compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_nat_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var b : boolean\nvar r : real\n\nvar _e00 : nat := b\nvar _e01 : nat := r\n"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Boolean)
    Idx::<Type>(1) TyRef(Real(Real))
    Idx::<Type>(2) TyRef(Nat(Nat))
    Idx::<Type>(3) TyRef(Nat(Nat))
def_kinds:
    DefId(0) Var(TyRef(Boolean))
    DefId(1) Var(TyRef(Real(Real)))
    DefId(2) Var(TyRef(Nat(Nat)))
    DefId(3) Var(TyRef(Nat(Nat)))
error at 48..49: mismatched types
| note for 41..44: initializer's type is incompatible with this type
error at 68..69: mismatched types
| note for 61..64: initializer's type is incompatible with this type
