compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_real_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var b : boolean\n\nvar _e00 : real := b\n"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Boolean)
    Idx::<Type>(1) TyRef(Real(Real))
def_kinds:
    DefId(0) Var(TyRef(Boolean))
    DefId(1) Var(TyRef(Real(Real)))
error at 36..38: mismatched types
| note for 28..33: initializer's type is incompatible with this type
