compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_string_1.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const N := 1\nvar c : char\nvar c1 : char(1)\nvar s : string\nvar s1 : string(1)\nvar s5 : string(5)\n\nvar _v00 : string(N) := c\nvar _v01 : string(N) := c1\nvar _v02 : string(N) := s1\nvar _v03 : string(N) := s % runtime checked\nvar _v04 : string(N) := s5 % runtime checked\n"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(2))) TyRef(Char)
    TypeId(HirId(Idx::<HirNode>(5))) TyRef(CharN(Fixed(1)))
    TypeId(HirId(Idx::<HirNode>(7))) TyRef(String)
    TypeId(HirId(Idx::<HirNode>(10))) TyRef(StringN(Fixed(1)))
    TypeId(HirId(Idx::<HirNode>(13))) TyRef(StringN(Fixed(5)))
    TypeId(HirId(Idx::<HirNode>(16))) TyRef(StringN(Fixed(1)))
    TypeId(HirId(Idx::<HirNode>(20))) TyRef(StringN(Fixed(1)))
    TypeId(HirId(Idx::<HirNode>(24))) TyRef(StringN(Fixed(1)))
    TypeId(HirId(Idx::<HirNode>(28))) TyRef(StringN(Fixed(1)))
    TypeId(HirId(Idx::<HirNode>(32))) TyRef(StringN(Fixed(1)))
def_kinds:
    DefId(0) Const(TyRef(Int(Int)))
    DefId(1) Var(TyRef(Char))
    DefId(2) Var(TyRef(CharN(Fixed(1))))
    DefId(3) Var(TyRef(String))
    DefId(4) Var(TyRef(StringN(Fixed(1))))
    DefId(5) Var(TyRef(StringN(Fixed(5))))
    DefId(6) Var(TyRef(StringN(Fixed(1))))
    DefId(7) Var(TyRef(StringN(Fixed(1))))
    DefId(8) Var(TyRef(StringN(Fixed(1))))
    DefId(9) Var(TyRef(StringN(Fixed(1))))
    DefId(10) Var(TyRef(StringN(Fixed(1))))
