compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_string_3_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const N := 3\nvar c5 : char(5)\n\nvar _e00 : string(N) := c5 % [not captured by ctc]\n"

---
ty_nodes:
    Idx::<Type>(0) TyRef(CharN(Fixed(5)))
    Idx::<Type>(1) TyRef(StringN(Fixed(3)))
def_kinds:
    DefId(0) Const(TyRef(Int(Int)))
    DefId(1) Var(TyRef(CharN(Fixed(5))))
    DefId(2) Var(TyRef(StringN(Fixed(3))))
error at 55..57: mismatched types
| note for 42..51: initializer's type is incompatible with this type
